Adapt fix to 23.0